--- a/01-脚本的动态加载/index.html
+++ b/01-脚本的动态加载/index.html
@@ -6,6 +6,9 @@
     <title>脚本的动态加载</title>
   </head>
   <body>
-    <script></script>
+
+    <h1>01-脚本的动态加载</h1>
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
