fix: 代码格式化~

--- a/01-脚本的动态加载/index.html
+++ b/01-脚本的动态加载/index.html
@@ -6,8 +6,10 @@
     <title>脚本的动态加载</title>
   </head>
   <body>
-
-    <h1>01-脚本的动态加载</h1>
+    <!-- DOM -->
+    <div>
+      <h1>01-脚本的动态加载</h1>
+    </div>
 
     <script src="./js/index.js"></script>
   </body>
