--- a/深入之从原型到原型链/index.html
+++ b/深入之从原型到原型链/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>xxxxxxxxxxxx</title>
+    <title>深入之从原型到原型链</title>
   </head>
   <body>
     <!-- DOM -->
     <div>
-      <h1>xxxxxxxxxxxxxxxxxxxxxxx</h1>
+      <h1>深入之从原型到原型链</h1>
     </div>
 
     <script src="./js/index.js"></script>
